--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
-
+.delete {
+  padding: 0;
+  border: none;
+  width: 20px;
+  height: 20px;
+  margin-left: 20px;
+  background: url('./img/delete.svg');
+}
+p {
+  display: flex;
+  align-items: center;
+}
