--- a/style.css
+++ b/style.css
@@ -1,23 +1,11 @@
-* {
-  width: 90%;
-  height: 50px;
-  margin: auto;
-  padding: 10px 20px;
-  border-radius: 10px;
-}
-.container {
-  width: 50%;
-  margin: auto;
-}
-input {
-  display: block;
-  margin-bottom: 20px;
-  border: none;
-  outline: none;
-  background: #45e33578;
+.one {
+  position: absolute;
+  top: 10px;
+  left: 30px;
 }
 
-p {
-  min-height: 100px;
-  background: #fdfcfa;
+.two {
+  position: absolute;
+  top: 150px;
+  left: 30px;
 }
